<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    tools:context="com.nl.founditapp.ActivityDetails">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:srcCompat="@drawable/details" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="vertical">

            <Space
                android:layout_width="match_parent"
                android:layout_height="200dp" />

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/titleicon"
                android:drawableStart="@drawable/titleicon"
                android:text="@string/tTitle"
                android:textSize="35dp" />

            <TextView
                android:id="@+id/textViewCategory"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tCategory"
                android:textSize="15dp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/editTextDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/dateicon"
                    android:drawableStart="@drawable/dateicon"
                    android:editable="false"
                    android:gravity="center"
                    android:text="@string/tDate"
                    android:textSize="30dp" />

                <Space
                    android:layout_width="20dp"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/editTextTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:background="@android:color/transparent"
                    android:drawableLeft="@drawable/houricon"
                    android:drawableStart="@drawable/houricon"
                    android:editable="false"
                    android:gravity="center"
                    android:text="@string/tHour"
                    android:textSize="30dp" />
            </LinearLayout>

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <EditText
                android:id="@+id/editTextDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:editable="false"
                android:drawableTop="@drawable/informationicon"
                android:background="@android:color/transparent"
                android:gravity="center"
                android:text="@string/tDescribe" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="30dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/wazeButton"
                    android:layout_width="45dp"
                    android:layout_height="45dp"
                    android:layout_gravity="center"
                    android:background="@drawable/waze"
                    android:onClick="wazeClick"
                    android:gravity="center" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewLocation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="20dp"
                android:textStyle="italic"
                android:text="@string/tCheckLocation" />
        </LinearLayout>

    </ScrollView>
</android.support.constraint.ConstraintLayout>