<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wallpaper"
    android:focusable="false"
    tools:context="com.nl.founditapp.AddActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:defaultFocusHighlightEnabled="false"
        app:srcCompat="@drawable/addnew" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="150dp"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

                <EditText
                    android:id="@+id/titleText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:ems="10"
                    android:gravity="center"
                    android:hint="@string/tTitle"
                    android:inputType="textPersonName"
                    android:textSize="20dp" />
            </android.support.design.widget.TextInputLayout>

            <EditText
                android:id="@+id/categoryText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@android:color/transparent"
                android:editable="false"
                android:ems="10"
                android:gravity="center"
                android:textSize="15sp" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <TextView
                android:id="@+id/dateText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:hint="@string/tPickDate"
                android:textSize="15sp" />

            <DatePicker
                android:id="@+id/datePicker"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_gravity="center"
                android:layout_weight="4"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/timeText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:hint="@string/tPickAnHour"
                    android:textAlignment="center"
                    android:textSize="15sp" />

                <TimePicker
                    android:id="@+id/timePicker"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <Space
                    android:layout_width="wrap_content"
                    android:layout_height="5dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center">

                    <EditText
                        android:id="@+id/descriptionText"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/tDescribe"
                        android:inputType="textMultiLine"
                        android:textSize="15sp" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>

            <Space
                android:layout_width="wrap_content"
                android:layout_height="15dp" />

            <Button
                android:id="@+id/locationButton"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_gravity="center"
                android:background="@drawable/mark"
                android:gravity="center" />

            <TextView
                android:id="@+id/locationTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/tLocation" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="50dp" />

            <Button
                android:id="@+id/addActivityButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="@drawable/button_shape"
                android:text="@string/tFinish" />

        </LinearLayout>
    </ScrollView>

</RelativeLayout>
